--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
 PORT=
 
-MONGODB_USER=your_username
-MONGODB_PASSWORD=your_password
-MONGODB_URL=cluster0.xxxxx.mongodb.net
-MONGODB_DB=your_database_name
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_URL=
+MONGODB_DB=
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
+
+JWT_SECRET = 
+APP_DOMAIN= 
