--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,10 @@ SMTP_USER=
 SMTP_PASSWORD=
 SMTP_FROM=
 
-JWT_SECRET = 
+JWT_SECRET= 
 APP_DOMAIN= 
+
+CLOUD_NAME= 
+API_KEY= 
+API_SECRET= 
+ENABLE_CLOUDINARY=
