saving google auth

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ CLOUD_NAME=
 API_KEY= 
 API_SECRET= 
 ENABLE_CLOUDINARY=
+
+GOODLE_OAUTH_CLIENT_ID=
+GOODLE_OAUTH_CLIENT_SECRED=
+GOODLE_OAUTH_REDIRECT_URI=
