--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "pino-http": "^10.4.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
