--- a/swagger/paths/contacts/post.yaml
+++ b/swagger/paths/contacts/post.yaml
@@ -63,5 +63,7 @@ responses:
             data:
               type:
               $ref: ../../components/schemas/contact.yaml
+  '400':
+    $ref: '../../components/responses/400.yaml'
   '401':
     $ref: '../../components/responses/401.yaml'
